# trailbrake

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.claude/skills/visualize-widgets/: SKILL.md
.github/workflows/: refresh-trackmaps.yml  release.yml
crates/iracing-connector/: Cargo.toml
crates/iracing-connector/src/: connector.rs  lib.rs  session.rs  track_map.rs
crates/iracing-connector/src/irsdk/: header.rs  mmap.rs  mod.rs  var.rs
crates/lmu-connector/: Cargo.toml
crates/lmu-connector/src/: lib.rs
crates/overlay-cli/: Cargo.toml
crates/overlay-cli/src/: main.rs
crates/overlay-core/: Cargo.toml
crates/overlay-core/src/: connector.rs  lib.rs  mock.rs  reader.rs  record.rs  replay.rs  snapshot.rs
crates/vr-overlay/: Cargo.toml
crates/vr-overlay/src/: backend.rs  capture.rs  imp.rs  lib.rs  openvr.rs  openxr.rs  stub.rs  transform.rs
docs/: ADDING_A_SIM.md  ADDING_A_WIDGET.md  DEVELOPMENT.md  VR.md  audit-2026-07-01.md  audit-progress.md
fixtures/: session.jsonl
scripts/: clean-track-turns.mjs  fetch-lovely-car-data.mjs  fetch-lovely-track-data.mjs  fetch-track-maps.mjs  gen-icon.mjs  set-version.mjs  shoot-widgets.mjs
src/: App.tsx  OverlayApp.tsx  fonts.css  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  track_maps.rs  vr.rs
src/components/: FitContent.tsx  SettingsPanel.tsx  Toolbar.tsx  WidgetHost.tsx  liquidGlass.tsx  screenLayer.ts
src/gallery/: WidgetGallery.tsx
src/manager/: BrowserDevShell.tsx  BuyMeACoffee.tsx  ColorField.tsx  ColorWheel.tsx  FieldListEditor.tsx  ManagerApp.tsx  WidgetConfigEditor.tsx  WidgetPreview.tsx  accent.ts  icons.tsx  manager.css  previewStore.ts  shell.tsx  ui.tsx  widgetMeta.ts
src/manager/pages/: HotkeysPage.tsx  ProfilesPage.tsx  SettingsPage.tsx  SoftwareUpdates.tsx  WidgetsPage.tsx
src/perf/: PerfHud.tsx
src/store/: appSettings.ts  controls.ts  editMode.ts  hooks.ts  layout.ts  mockSource.ts  persistence.ts  session.ts  sessionState.ts  store.ts  storeContext.tsx  sync.ts  transport.ts  types.ts  updater.ts
src/theme/: theme.ts
src/widgets/: Chat.tsx  CornerName.tsx  DashCluster.tsx  DeltaBar.tsx  Flag.tsx  Flatmap.tsx  FuelSession.tsx  GarageCover.tsx  HeartRate.tsx  HighlightedDriver.tsx  InputGraph.tsx  LapTimer.tsx  LaunchAssist.tsx  LicenseBadge.tsx  PitBadge.tsx  PitBoard.tsx  PitlaneHelper.tsx  RaceControl.tsx  Radar.tsx  RejoinIndicator.tsx  Relative.tsx  SectorDelta.tsx  SetupComparison.tsx  SlowCarAhead.tsx  Spotter.tsx  Standings.tsx  Tachometer.tsx  TelemetryInspector.tsx  TrackMap.tsx  TrafficIndicator.tsx  TyreBadge.tsx  Weather.tsx  WidgetTitle.tsx  carIcons.tsx  carLeds.ts  contract.ts  format.ts  raceColors.ts  registry.ts  relativeInfoIcons.tsx  (+1 more)
src/widgets/data/: carLeds.json
