[package]
name = "sim-overlay-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri overlay shell: transparent always-on-top windows + telemetry→webview bridge."

[[bin]]
name = "sim-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
overlay-core = { workspace = true }
# Sync HTTP client for the background track-map bundle fetch at startup.
# Tiny, no async runtime — fits the std::thread pattern used by spawn_bridge.
ureq = "2"

[target.'cfg(windows)'.dependencies]
iracing-connector = { workspace = true }
