[package]
name = "sim-overlay-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri overlay shell: transparent always-on-top windows + telemetry→webview bridge."

[[bin]]
name = "sim-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
# In-app auto-update: checks the GitHub Releases `latest.json` manifest, then
# downloads + verifies (minisign) + installs the new installer in place.
# `process` exposes the relaunch used right after an update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
overlay-core = { workspace = true }
# VR compositor. Lightweight no-op stub by default; the real OpenVR/OpenXR
# backends are pulled in only with the `vr` feature (Windows + LLVM, see below).
vr-overlay = { workspace = true }
# Sync HTTP client for the background track-map bundle fetch at startup.
# Tiny, no async runtime — fits the std::thread pattern used by spawn_bridge.
ureq = "2"

[features]
# Build the real VR backends (OpenVR + OpenXR). Requires Windows, LLVM/libclang
# (ovr_overlay -> autocxx), and the Windows SDK:
#   cargo tauri build --features vr      (or: cargo run --features vr)
vr = ["vr-overlay/vr"]

[target.'cfg(windows)'.dependencies]
iracing-connector = { workspace = true }
