[package]
name = "iracing-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iRacing shared-memory reader, normalized into overlay-core's TelemetrySnapshot."

[dependencies]
overlay-core = { workspace = true }

# The Win32 surface is only needed on Windows. On other platforms this crate
# compiles to an empty lib so `cargo build --workspace` works on macOS too.
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
# Parsing the bundled track-map JSON (assets/track_maps.json) at first use.
serde = { workspace = true }
serde_json = "1"
